--- a/css/numberDisplay.css
+++ b/css/numberDisplay.css
@@ -1,52 +1,104 @@
-.number_display_container{
-    padding: .5em; 
-    width: 80%;
-    border-radius: 1em;
-    font-size: 2.5em;
+.number_display_container {
+  padding: 0.5em;
+  width: 80%;
+  border-radius: 1em;
+  font-size: 2.5em;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+
+  .digit {
+    border: 2px solid #cccccc40;
+    padding: 0.5em 1em;
+    border-radius: 0.5em;
+    backdrop-filter: blur(5px);
+    background: rgba(26, 26, 26);
+    font-weight: 700;
+    color: white;
+    width: 2.5em;
+    height: 2.5em;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: .5em;
+    overflow: hidden;
+    box-shadow: inset 0 0 10px 0px #00000040, 0 0 20px 0px #00000040,
+      0 0 40px 0px #00000040;
 
-    .digit{
-        border: 2px solid #cccccc40;
-        padding: .5em 1em;
+    span {
+      position: absolute;
+      background: inherit;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.2),
+        0 0 40px rgba(0, 0, 0, 0.2);
+    }
+    span.new {
+      animation: loadIn 0.5s ease;
+    }
+  }
+}
+
+@keyframes loadIn {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.control_box{
+    background: #00000050;
+    border: 2px solid #cccccc40;
+    border-radius: .5em;
+    padding: .5em;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    button,input{
         border-radius: .5em;
-        backdrop-filter: blur(5px);
-        background: rgba(26, 26, 26);
-        font-weight: 700;
+        border: 0;
+        background: #121212;
+        font-size: 1em;
+        cursor: pointer;
+        font-weight: 500;
+        width: 100%;
+        height: 3em;
         color: white;
-        width: 2.5em;
-        height: 2.5em;
+        border: 2px solid transparent;
+        padding: 0 1em;
+    }
+    button:hover{
+        border: 2px solid #cccccc40;
+    }
+    .quick_button,.custom_points{
         display: flex;
         justify-content: center;
-        align-items: center;
-        overflow: hidden;
-        box-shadow: inset 0 0 10px 0px #00000040, 0 0 20px 0px #00000040, 0 0 40px 0px #00000040;
-
-        span{
-            position: absolute;
-            background: inherit;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2),0 0 20px rgba(0, 0, 0, 0.2),0 0 40px rgba(0, 0, 0, 0.2);
+        gap: 0.5em;
+    }.custom_points{
+        button{
+            width: 30%;
+            height: 4em;
+            line-height: 1.5em;
         }
-        span.new{
-            animation: loadIn .5s ease;
+        input{
+            width: 70%;
+            height: 4em;
+            line-height: 1.5em;
         }
     }
 }
 
-@keyframes loadIn {
-    0%{
-        transform: translateY(100%);
-    }
-    100%{
-        transform: translateY(0);
-    }
-    
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.5em;
 }
