--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100dvh;
+  overflow: hidden;
   /* checker pattern background black */
 }
 
