--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,13 @@ body {
   min-height: 100dvh;
   overflow: hidden;
   /* checker pattern background black */
+  .app{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .prototype_bg {
@@ -129,5 +136,35 @@ nav{
   .back_button:hover::after{
     rotate: -45deg;
     transform: translateX(3px) translateY(-3px);
+  }
+}
+
+.transition{
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  z-index: 200;
+  pointer-events: none;
+
+  .transition-row{
+    flex: 1;
+    display: flex;
+    gap: 0;
+  }
+  .transition-row.row-1 .block{
+    transform-origin: top;
+  }
+  .transition-row.row-2 .block{
+    transform-origin: bottom;
+  }
+  
+  .block{
+    flex: 1;
+    background: #161616 ;
+    transform: scaleY(1.5) scaleX(1.1);
+    will-change: transform;
   }
 }
